<resources>
    <string name="app_name">Choice</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="caption">Caption</string>
    <string name="view_all_comments"><u>View all comments</u></string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="tab_text_1">My Posts</string>
    <string name="tab_text_2">Voted</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_account">Create Account</string>
    <string name="forgot_password">Forgot Password</string>
</resources>